k8s/manifests/30-service.yml
apiVersion: v1
kind: Service
metadata:
  name: restapi-flask
  labels:
    app: restapi-flask
spec:
  selector:
    app: restapi-flask
  ports:
  - port: 5000
